# RTv1

./: CMakeLists.txt  MAN_CONF  Makefile  README.md
includes/: RTv1.h  objects.h  rtv1.h  usable_structs.h
libft/: Makefile  author  ft_arithmetic_oper_vector.c  ft_atoi.c  ft_atoi_base.c  ft_bzero.c  ft_free_after_split.c  ft_intlen.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_iscolor_rgb.c  ft_isdigit.c  ft_isdouble_or_int.c  ft_isprint.c  ft_itoa.c  ft_lstadd.c  ft_lstdel.c  ft_lstdelone.c  ft_lstiter.c  ft_lstmap.c  ft_lstnew.c  ft_lstswap.c  ft_memalloc.c  ft_memccpy.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memdel.c  ft_memmove.c  ft_memset.c  ft_operation_on_vector.c  ft_putchar.c  ft_putchar_fd.c  ft_putendl.c  ft_putendl_fd.c  ft_putnbr.c  ft_putnbr_fd.c  ft_putstr.c  ft_putstr_fd.c  (+36 more)
scenes/: 1 plane , 2 cylinders, 4 spheres  A lot of objects  all_scene  bug  cone  cylinder  final_scene  first_scene  mirror_room  red_sphere  rgb_scene  second_scene  sphere
src/: calc_intensity.c  culc_intensity.c  get_closest_object.c  init_and_loop_mlx.c  init_mlx.c  intersection.c  main.c  nrm_objects.c  point_from_screen_to_viewport.c  reflection_ray.c  render.c  right_parameters_obj.c  show_obj_cord.c  start_loop_mlx.c  trace_ray.c  val_ambient.c  val_camera.c  val_cone.c  val_cylinder.c  val_data_for_obj.c  val_data_obj_1.c  val_dls.c  val_plane.c  val_sphere.c  val_spot.c  validation_config.c  vector_writer.c
